# hydrogen-widgets

./: README.md  requirements.txt  setup.cfg
figures/: widget_diagrams.drawio
hydrogen_widgets/: current_conditions_heatmap.py  forecast_soilmoisture_heatmap.py  forecast_timeseries.py  forecast_waterdepth_heatmap.py  location_map.py  scenarios_timeseries.py  streamflow_points.py  terrain_map.py  terrain_obs_points.py
hydrogen_widgets/utilities/: create_plotly_html_file.py  forecast_utilities.py  get_widget_layout.py  get_widget_result.py
hydrogen_widgets/utilities/data/: dashboard_config.json  demo.html
tests/: test_current_conditions_heatmap.py  test_forecast_soilmoisture_heatmap.py  test_forecast_timeseries.py  test_forecast_waterdepth_heatmap.py  test_get_widget_layout.py  test_get_widget_result.py  test_location_map.py  test_scenarios_timeseries.py  test_streamflow_points.py  test_terrain_map.py  test_terrain_obs_points.py
tests/test_data/test_user/test_domain/: domain_state.json
tests/test_data/test_user/test_domain/current_conditions/: current_conditions.05272022.nc
tests/test_data/test_user/test_domain/domain_files/: domain.dbf  domain.shp  domain.shx  obs_sites.csv  static_domain_variables.nc
tests/test_data/test_user/test_domain/historic_forcings/: CONUS1_NOAA_Precip.05262022.nc  CONUS1_NOAA_Temperature.05262022.nc
tests/test_data/test_user/test_domain/observations/groundwater/: 403536111545001.nc
tests/test_data/test_user/test_domain/observations/streamflow/: 06713500.nc  06714215.nc  06718550.nc  06719505.nc  394839104570300.nc
(+4 files in other folders)
