[metadata]
name = hydrogen-widgets
version = 0.5.0
author_email = wh3248@princeton.edu
license = Apache
url = https://github.com/hydroframe-ml/hydrogen-widgets
description = Implementation of visualization widgets

[options]
packages=find:
include_package_data = True

[options.package_data]
* = *.json


